--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
   <!-- NAVIGATION -->
   <nav>
-    <div>
+    <div class="container flex space-between">
       <!-- BRANDING -->
-      <div>
+      <div class="flex align-center">
         <a href="#">
           <img alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
       </div>
       <!-- SEARCH -->
-      <div>
+      <div class="flex flex-one align-center">
         <div>
           <form>
             <input aria-label="Search" placeholder="What can we help you find?" type="search">
             <button type="submit">SEARCH</button>
           </form>
-          <ul>
+          <ul class="flex space-between">
             <li><a href="#">Clothing</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
@@ -33,8 +33,8 @@
           </ul>
         </div>
         <!-- PROFILE -->
-        <div>
-          <div>
+        <div class="flex align-center">
+          <div class="flex flex-column">
             John Doe <a href="#">Log Out</a>
           </div>
           <div><img alt="John Doe" src="img/profile-pic.jpg"></div>
@@ -45,7 +45,7 @@
 
     <!-- HERO -->
   <section>
-    <div>
+    <div class="container flex flex-column align-center center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
@@ -53,11 +53,11 @@
   </section>
 
   <!-- MAIN CONTAINER -->
-  <div>
+  <div class="container">
 
     <!-- SALE BANNER -->
-    <section>
-      <div>
+    <section >
+      <div class="align-center center">
         <img alt="Brown Boots" src="img/brown-boots.jpg">
         <div>
           <div>Couples retreat weekend</div>
@@ -111,19 +111,19 @@
     <!-- FULL BANNER -->
     <section>
       <div></div>
-      <div>
+      <div class="flex flex-column align-center center">
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
-        <a href="#">See Review</a>
+        <a class="btn" href="#"><button class="btn-default">See Review</button></a>
       </div>
     </section>
 
   </div>
 
   <!-- FOOTER -->
-  <footer>
-    <section>
+  <footer class="btn">
+    <section class="container space-between">
       <div>
         <div>Customer Support</div>
         <ul>
@@ -166,15 +166,15 @@
         <div>
           <div>Email Updates</div>
           <div>Exclusive sales, special offers, and more.</div>
-          <input type="text" placeholder="Enter email address" />
-          <button>Sign up</button>
+          <input class="form-control" type="text" placeholder="Enter email address" />
+          <button class="btn-primary">Sign up</button>
         </div>
       </div>
     </section>
 
     <!-- PS DEMO -->
     <section>
-      <div>
+      <div class="flex flex-column align-center">
         <img src="img/pluralsight-white.png" />
         <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
