add missing flex class

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </section>
 
   <!-- MAIN CONTAINER -->
-  <div class="container">
+  <div class="container flex">
 
     <!-- SALE BANNER -->
     <section >
