add missing flex class

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   </section>
 
   <!-- MAIN CONTAINER -->
-  <div class="container flex">
+  <div class="container">
 
     <!-- SALE BANNER -->
     <section >
-      <div class="align-center center">
+      <div class="align-center center flex">
         <img alt="Brown Boots" src="img/brown-boots.jpg">
         <div>
           <div>Couples retreat weekend</div>
