--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="category">
         <a href="#">
           <img alt="Splash Chic" src="img/category-1.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Splash Chic</h3>
             <div>Women's Wet Gear</div>
           </div>
